--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,13 @@ jobs:
     - name: Generate SBOM
       run: |
         syft docker.io/kodekloud/webapp-color:latest -o sbdx > spdx.json
-        # syft docker.io/library/nginx:latest -o cyclonedx-xml > sbom.xml
+        
 
     - name: Upload SBOM Artifact
       uses: actions/upload-artifact@v3
       with:
         name: sbom-report
-        path: sbom.xml
+        path: spdx.json
+        #path: sbom.xml
+
+#syft docker.io/library/nginx:latest -o cyclonedx-xml > sbom.xml
